# CrossFit-Warmup-Generator

./: .gitignore  LICENSE  README.md  app.py  barbell_warmups.py  barbell_warmups_dict.py  checks.py  droms.py  exercises.py  exercises_dataset.py  filters.py  forms.py  getters.py  gymnastics_warmups.py  javascript.js  kb_warmups.py  loading.py  media.py  metcons.py  models.py  package-lock.json  pyproject.toml  requirements.txt  run.py  site.db  tester_python.py  warmup_generator.py  warmups_dataset.py
appfolder/: __init__.py  barbell_warmups.py  checks.py  config.py  db_warmups.py  drom_warmups.py  droms.py  exercises.py  filters.py  forms.py  getters.py  gymnastics_warmups.py  metcon_warmups.py  models.py  package-lock.json  requirements.txt  routes.py  site.db  slimselect.js  tester_python.py
appfolder/main/: routes.py
appfolder/posts/: routes.py
appfolder/static/js/: remember_checkbox.js
appfolder/static/styles/: index.css
appfolder/templates/: about.html  account.html  base.html  check_time.html  confirm_email.html  feedback.html  index.html  layout.html  login.html  register.html  say_time.html  tester2.html  thanks.html  your_gear.html
appfolder/users/: forms.py  routes.py  utils.py
static/styles/: index.css
templates/: base.html  get_exercises.html  index.html  index2.html  login.html  register.html  say_time.html  tester.html
