[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["marcusrein <marcus.rein@gmail.com>"]
description = ""
name = "wugenflaskjj"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
fuzzywuzzy = "^0.18.0"
python = "^3.7"
python-Levenshtein = "^0.12.0"
[tool.poetry.dev-dependencies]
